# cnct4game

./: Cargo.toml  README.md  bot.py
src/: board.rs  main.rs  player.rs
