[package]
name = "cnct4game"
version = "0.1.0"
edition = "2021"
authors = ["Ashton Coates <a.coates.8537@gmail.com>"]
license = "MIT"
description = "A connect 4 game in the command line"
readme = "README.md"
homepage = "https://github.com/AshtonCoates/cnct4game"
repository = "https://github.com/AshtonCoates/cnct4game"
keywords = ["cli", "connect-four", "game"]
categories = ["command-line-utilities"]


[dependencies]
